--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  # flutter_slidable: ^2.0.0
   flutter_slidable: ^3.1.1
-  image_picker: ^0.8.5+3
+  intl: ^0.17.0
+  provider: ^6.0.5
+  hive: ^2.0.0
+  hive_flutter: ^1.1.0
+ 
+
   
 
 dev_dependencies:
@@ -50,6 +54,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+  hive_generator: ^1.1.0
+  build_runner: ^2.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
